<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="0dp">

    <com.example.myapplication.GradientBackgroundView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/glassPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/glass_background"
        android:elevation="8dp"
        android:orientation="vertical"
        android:layout_margin="24dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">


        <TextView
            android:id="@+id/appTitle"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/financial_tracker" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/SubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/track_your_spending_effortlessly" />

        <Button
            android:id="@+id/startButton"
            style="@style/CandyButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/start"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/forthColor"
            android:textSize="14sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
