<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">

    <com.example.myapplication.GradientBackgroundView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:elevation="8dp"
        android:clipToOutline="true"
        android:outlineProvider="background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Back"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:elevation="6dp"
                android:ellipsize="none"
                android:padding="12dp"
                android:text="@string/add_transaction"
                android:textColor="@color/buttonTextColor"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="4dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:src="@drawable/calendar"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:id="@+id/selectDateText"
                    android:text="@string/choose_date"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="16sp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_name"
            android:textColor="@color/buttonTextColor"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/cardSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/spinnerBackColor"
            android:dropDownHorizontalOffset="80dp"
            android:theme="@style/spinnerTheme"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/typeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:checkedButton="@+id/incomeToggle"
            app:singleSelection="true"
            app:background="@color/glass1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/incomeToggle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textColor="@color/green"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/expenseToggle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textColor="@color/red"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="12dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/buttonTextColor"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/spinnerBackColor"
            android:dropDownHorizontalOffset="80dp"
            android:theme="@style/spinnerTheme"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/amountEditText"
            style="@style/GlassInput"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp"
            android:textColor="@color/buttonTextColor" />

        <EditText
            android:id="@+id/descriptionEditText"
            style="@style/GlassInput"
            android:hint="@string/description"
            android:layout_marginBottom="20dp"
            android:textColor="@color/buttonTextColor" />


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Currency"-->
<!--            android:textSize="14sp"-->
<!--            android:textColor="@color/secondaryTextColor"-->
<!--            android:layout_marginLeft="8dp"-->
<!--            android:layout_marginTop="8dp"  />-->

<!--        <Spinner-->
<!--            android:id="@+id/currencySpinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:popupBackground="@color/spinnerBackColor"-->
<!--            android:dropDownHorizontalOffset="80dp"-->
<!--            android:theme="@style/spinnerTheme"-->
<!--            android:layout_marginBottom="20dp" />-->

        <Button
            style="@style/CandyButton"
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
</FrameLayout>
