<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogChangePasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp"
    android:outlineProvider="background"
    android:background="@drawable/background_dialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/GlassInput"
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:imeOptions="actionNext" />

        <ImageButton
            android:id="@+id/oldPasswordToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_eye_closed"
            android:layout_marginRight="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Toggle Old Password Visibility" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            style="@style/GlassInput"
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:imeOptions="actionNext" />

        <ImageButton
            android:id="@+id/newPasswordToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_eye_closed"
            android:layout_marginRight="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Toggle New Password Visibility" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            style="@style/GlassInput"
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

        <ImageButton
            android:id="@+id/repeatPasswordToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_eye_closed"
            android:layout_marginRight="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Toggle Repeat Password Visibility" />
    </RelativeLayout>

    <Button
        style="@style/CandyButton"
        android:id="@+id/confirmPasswordChangeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="24dp" />

</LinearLayout>
